cmake_minimum_required(VERSION 3.7)
project(main)

set(CMAKE_CXX_STANDARD 11)

# TBS Colibri Race
include_directories(.)
include_directories(target/COLIBRI_RACE)
include_directories(main)
include_directories(vcp)

add_definitions(-DSPRACINGF3)
add_definitions(-DONBOARDFLASH)
add_definitions(-DFLASH_SIZE=256)
add_definitions(-DTARGET=COLIBRI_RACE)
add_definitions(-DF3_TARGETS=COLIBRI_RACE)
add_definitions(-DSTM32F303xC)
add_definitions(-DSTM32F303)


set(SOURCE_FILES
        blackbox/blackbox.c
        blackbox/blackbox.h
        blackbox/blackbox_fielddefs.h
        blackbox/blackbox_io.c
        blackbox/blackbox_io.h
        build/atomic.h
        build/build_config.c
        build/build_config.h
        build/debug.c
        build/debug.h
        build/version.c
        build/version.h
        cms/cms.c
        cms/cms.h
        cms/cms_menu_blackbox.c
        cms/cms_menu_blackbox.h
        cms/cms_menu_builtin.c
        cms/cms_menu_builtin.h
        cms/cms_menu_imu.c
        cms/cms_menu_imu.h
        cms/cms_menu_ledstrip.c
        cms/cms_menu_ledstrip.h
        cms/cms_menu_misc.c
        cms/cms_menu_misc.h
        cms/cms_menu_osd.c
        cms/cms_menu_osd.h
        cms/cms_menu_vtx.c
        cms/cms_menu_vtx.h
        cms/cms_types.h
        common/axis.h
        common/color.h
        common/colorconversion.c
        common/colorconversion.h
        common/encoding.c
        common/encoding.h
        common/filter.c
        common/filter.h
        common/gps_conversion.c
        common/gps_conversion.h
        common/maths.c
        common/maths.h
        common/printf.c
        common/printf.h
        common/streambuf.c
        common/streambuf.h
        common/time.h
        common/typeconversion.c
        common/typeconversion.h
        common/utils.h
        config/config_eeprom.c
        config/config_eeprom.h
        config/config_profile.h
        config/config_reset.h
        config/config_streamer.c
        config/config_streamer.h
        config/config_unittest.h
        config/feature.c
        config/feature.h
        config/parameter_group.c
        config/parameter_group.h
        config/parameter_group_ids.h
        drivers/accgyro.h
        drivers/accgyro_adxl345.c
        drivers/accgyro_adxl345.h
        drivers/accgyro_bma280.c
        drivers/accgyro_bma280.h
        drivers/accgyro_fake.c
        drivers/accgyro_fake.h
        drivers/accgyro_l3g4200d.c
        drivers/accgyro_l3g4200d.h
        drivers/accgyro_l3gd20.c
        drivers/accgyro_l3gd20.h
        drivers/accgyro_lsm303dlhc.c
        drivers/accgyro_lsm303dlhc.h
        drivers/accgyro_mma845x.c
        drivers/accgyro_mma845x.h
        drivers/accgyro_mpu.c
        drivers/accgyro_mpu.h
        drivers/accgyro_mpu3050.c
        drivers/accgyro_mpu3050.h
        drivers/accgyro_mpu6050.c
        drivers/accgyro_mpu6050.h
        drivers/accgyro_mpu6500.c
        drivers/accgyro_mpu6500.h
        drivers/accgyro_spi_bmi160.c
        drivers/accgyro_spi_bmi160.h
        drivers/accgyro_spi_icm20689.c
        drivers/accgyro_spi_icm20689.h
        drivers/accgyro_spi_mpu6000.c
        drivers/accgyro_spi_mpu6000.h
        drivers/accgyro_spi_mpu6500.c
        drivers/accgyro_spi_mpu6500.h
        drivers/accgyro_spi_mpu9250.c
        drivers/accgyro_spi_mpu9250.h
        drivers/adc.c
        drivers/adc.h
        drivers/adc_impl.h
        drivers/adc_stm32f10x.c
        drivers/adc_stm32f30x.c
        drivers/adc_stm32f4xx.c
        drivers/adc_stm32f7xx.c
        drivers/barometer.h
        drivers/barometer_bmp085.c
        drivers/barometer_bmp085.h
        drivers/barometer_bmp280.c
        drivers/barometer_bmp280.h
        drivers/barometer_fake.c
        drivers/barometer_fake.h
        drivers/barometer_ms5611.c
        drivers/barometer_ms5611.h
        drivers/barometer_spi_bmp280.c
        drivers/barometer_spi_bmp280.h
        drivers/barometer_spi_ms5611.c
        drivers/barometer_spi_ms5611.h
        drivers/buf_writer.c
        drivers/buf_writer.h
        drivers/bus_i2c.h
        drivers/bus_i2c_hal.c
        drivers/bus_i2c_soft.c
        drivers/bus_i2c_stm32f10x.c
        drivers/bus_i2c_stm32f30x.c
        drivers/bus_spi.c
        drivers/bus_spi.h
        drivers/bus_spi_hal.c
        drivers/bus_spi_soft.c
        drivers/bus_spi_soft.h
        drivers/compass.h
        drivers/compass_ak8963.c
        drivers/compass_ak8963.h
        drivers/compass_ak8975.c
        drivers/compass_ak8975.h
        drivers/compass_fake.c
        drivers/compass_fake.h
        drivers/compass_hmc5883l.c
        drivers/compass_hmc5883l.h
        drivers/compass_spi_hmc5883l.c
        drivers/compass_spi_hmc5883l.h
        drivers/display.c
        drivers/display.h
        drivers/display_ug2864hsweg01.c
        drivers/display_ug2864hsweg01.h
        drivers/dma.c
        drivers/dma.h
        drivers/dma_stm32f4xx.c
        drivers/dma_stm32f7xx.c
        drivers/exti.c
        drivers/exti.h
        drivers/flash.h
        drivers/flash_m25p16.c
        drivers/flash_m25p16.h
        drivers/gpio.h
        drivers/gpio_stm32f10x.c
        drivers/gpio_stm32f30x.c
        drivers/gpio_stm32f4xx.c
        drivers/gpio_stm32f7xx.c
        drivers/gyro_sync.c
        drivers/gyro_sync.h
        drivers/inverter.c
        drivers/inverter.h
        drivers/io.c
        drivers/io.h
        drivers/io_def.h
        drivers/io_def_generated.h
        drivers/io_impl.h
        drivers/io_types.h
        drivers/light_led.c
        drivers/light_led.h
        drivers/light_ws2811strip.c
        drivers/light_ws2811strip.h
        drivers/light_ws2811strip_hal.c
        drivers/light_ws2811strip_stdperiph.c
        drivers/max7456.c
        drivers/max7456.h
        drivers/max7456_symbols.h
        drivers/nvic.h
        drivers/pwm_esc_detect.c
        drivers/pwm_esc_detect.h
        drivers/pwm_output.c
        drivers/pwm_output.h
        drivers/pwm_output_dshot.c
        drivers/pwm_output_stm32f7xx.c
        drivers/rcc.c
        drivers/rcc.h
        drivers/rcc_types.h
        drivers/resource.c
        drivers/resource.h
        drivers/rx_nrf24l01.c
        drivers/rx_nrf24l01.h
        drivers/rx_pwm.c
        drivers/rx_pwm.h
        drivers/rx_spi.c
        drivers/rx_spi.h
        drivers/rx_xn297.c
        drivers/rx_xn297.h
        drivers/sdcard.c
        drivers/sdcard.h
        drivers/sdcard_standard.c
        drivers/sdcard_standard.h
        drivers/sensor.h
        drivers/serial.c
        drivers/serial.h
        drivers/serial_escserial.c
        drivers/serial_escserial.h
        drivers/serial_softserial.c
        drivers/serial_softserial.h
        drivers/serial_uart.c
        drivers/serial_uart.h
        drivers/serial_uart_hal.c
        drivers/serial_uart_impl.h
        drivers/serial_uart_stm32f10x.c
        drivers/serial_uart_stm32f30x.c
        drivers/serial_uart_stm32f4xx.c
        drivers/serial_uart_stm32f7xx.c
        drivers/serial_usb_vcp.c
        drivers/serial_usb_vcp.h
        drivers/sonar_hcsr04.c
        drivers/sonar_hcsr04.h
        drivers/sound_beeper.c
        drivers/sound_beeper.h
        drivers/stack_check.c
        drivers/stack_check.h
        drivers/system.c
        drivers/system.h
        drivers/system_stm32f10x.c
        drivers/system_stm32f30x.c
        drivers/system_stm32f4xx.c
        drivers/system_stm32f7xx.c
        drivers/timer.c
        drivers/timer.h
        drivers/timer_def.h
        drivers/timer_hal.c
        drivers/timer_impl.h
        drivers/timer_stm32f10x.c
        drivers/timer_stm32f10x.h
        drivers/timer_stm32f30x.c
        drivers/timer_stm32f30x.h
        drivers/timer_stm32f4xx.c
        drivers/timer_stm32f4xx.h
        drivers/timer_stm32f7xx.c
        drivers/timer_stm32f7xx.h
        drivers/transponder_ir.c
        drivers/transponder_ir.h
        drivers/usb_io.c
        drivers/usb_io.h
        drivers/vcd.h
        drivers/vtx_common.c
        drivers/vtx_common.h
        drivers/vtx_rtc6705.c
        drivers/vtx_rtc6705.h
        drivers/vtx_soft_spi_rtc6705.c
        drivers/vtx_soft_spi_rtc6705.h
        fc/cli.c
        fc/cli.h
        fc/config.c
        fc/config.h
        fc/controlrate_profile.c
        fc/controlrate_profile.h
        fc/fc_core.c
        fc/fc_core.h
        fc/fc_dispatch.c
        fc/fc_dispatch.h
        fc/fc_hardfaults.c
        fc/fc_init.c
        fc/fc_init.h
        fc/fc_msp.c
        fc/fc_msp.h
        fc/fc_rc.c
        fc/fc_rc.h
        fc/fc_tasks.c
        fc/fc_tasks.h
        fc/rc_adjustments.c
        fc/rc_adjustments.h
        fc/rc_controls.c
        fc/rc_controls.h
        fc/runtime_config.c
        fc/runtime_config.h
        flight/altitudehold.c
        flight/altitudehold.h
        flight/failsafe.c
        flight/failsafe.h
        flight/imu.c
        flight/imu.h
        flight/mixer.c
        flight/mixer.h
        flight/navigation.c
        flight/navigation.h
        flight/pid.c
        flight/pid.h
        flight/servos.c
        flight/servos.h
        io/asyncfatfs/asyncfatfs.c
        io/asyncfatfs/asyncfatfs.h
        io/asyncfatfs/fat_standard.c
        io/asyncfatfs/fat_standard.h
        io/beeper.c
        io/beeper.h
        io/dashboard.c
        io/dashboard.h
        io/displayport_max7456.c
        io/displayport_max7456.h
        io/displayport_msp.c
        io/displayport_msp.h
        io/displayport_oled.c
        io/displayport_oled.h
        io/flashfs.c
        io/flashfs.h
        io/gimbal.h
        io/gps.c
        io/gps.h
        io/ledstrip.c
        io/ledstrip.h
        io/motors.h
        io/osd.c
        io/osd.h
        io/serial.c
        io/serial.h
        io/serial_4way.c
        io/serial_4way.h
        io/serial_4way_avrootloader.c
        io/serial_4way_avrootloader.h
        io/serial_4way_impl.h
        io/serial_4way_stk500v2.c
        io/serial_4way_stk500v2.h
        io/servos.h
        io/statusindicator.c
        io/statusindicator.h
        io/transponder_ir.c
        io/transponder_ir.h
        io/vtx.c
        io/vtx.h
        io/vtx_smartaudio.c
        io/vtx_smartaudio.h
        io/vtx_smartaudio_cms.h
        io/vtx_string.c
        io/vtx_string.h
        io/vtx_tramp.c
        io/vtx_tramp.h
        msp/msp.h
        msp/msp_protocol.h
        msp/msp_serial.c
        msp/msp_serial.h
        rx/crsf.c
        rx/crsf.h
        rx/ibus.c
        rx/ibus.h
        rx/jetiexbus.c
        rx/jetiexbus.h
        rx/msp.c
        rx/msp.h
        rx/nrf24_cx10.c
        rx/nrf24_cx10.h
        rx/nrf24_h8_3d.c
        rx/nrf24_h8_3d.h
        rx/nrf24_inav.c
        rx/nrf24_inav.h
        rx/nrf24_syma.c
        rx/nrf24_syma.h
        rx/nrf24_v202.c
        rx/nrf24_v202.h
        rx/pwm.c
        rx/pwm.h
        rx/rx.c
        rx/rx.h
        rx/rx_spi.c
        rx/rx_spi.h
        rx/sbus.c
        rx/sbus.h
        rx/spektrum.c
        rx/spektrum.h
        rx/sumd.c
        rx/sumd.h
        rx/sumh.c
        rx/sumh.h
        rx/xbus.c
        rx/xbus.h
        scheduler/scheduler.c
        scheduler/scheduler.h
        sensors/acceleration.c
        sensors/acceleration.h
        sensors/barometer.c
        sensors/barometer.h
        sensors/battery.c
        sensors/battery.h
        sensors/boardalignment.c
        sensors/boardalignment.h
        sensors/compass.c
        sensors/compass.h
        sensors/current.c
        sensors/current.h
        sensors/current_ids.h
        sensors/esc_sensor.c
        sensors/esc_sensor.h
        sensors/gyro.c
        sensors/gyro.h
        sensors/gyroanalyse.c
        sensors/gyroanalyse.h
        sensors/initialisation.c
        sensors/initialisation.h
        sensors/sensors.h
        sensors/sonar.c
        sensors/sonar.h
        sensors/voltage.c
        sensors/voltage.h
        sensors/voltage_ids.h
        target/COLIBRI_RACE/bus_bst.h
        target/COLIBRI_RACE/bus_bst_stm32f30x.c
        target/COLIBRI_RACE/config.c
        target/COLIBRI_RACE/i2c_bst.c
        target/COLIBRI_RACE/i2c_bst.h
        target/COLIBRI_RACE/target.c
        target/COLIBRI_RACE/target.h
        target/COLIBRI_RACE/target.mk
        target/common.h
        target/common_post.h
        target/stm32f1xx_hal_conf.h
        target/stm32f3xx_hal_conf.h
        target/stm32f4xx_hal_conf.h
        target/stm32f7xx_hal_conf.h
        target/system_stm32f30x.c
        target/system_stm32f30x.h
        target/system_stm32f4xx.c
        target/system_stm32f4xx.h
        target/system_stm32f7xx.c
        target/system_stm32f7xx.h
        telemetry/crsf.c
        telemetry/crsf.h
        telemetry/frsky.c
        telemetry/frsky.h
        telemetry/hott.c
        telemetry/hott.h
        telemetry/ibus.c
        telemetry/ibus.h
        telemetry/ibus_shared.c
        telemetry/ibus_shared.h
        telemetry/jetiexbus.h
        telemetry/ltm.c
        telemetry/ltm.h
        telemetry/mavlink.c
        telemetry/mavlink.h
        telemetry/smartport.c
        telemetry/smartport.h
        telemetry/srxl.c
        telemetry/srxl.h
        telemetry/telemetry.c
        telemetry/telemetry.h
        vcp/hw_config.c
        vcp/hw_config.h
        vcp/platform_config.h
        vcp/stm32_it.c
        vcp/stm32_it.h
        vcp/usb_conf.h
        vcp/usb_desc.c
        vcp/usb_desc.h
        vcp/usb_endp.c
        vcp/usb_istr.c
        vcp/usb_istr.h
        vcp/usb_prop.c
        vcp/usb_prop.h
        vcp/usb_pwr.c
        vcp/usb_pwr.h
        vcp_hal/usbd_cdc_interface.c
        vcp_hal/usbd_cdc_interface.h
        vcp_hal/usbd_conf.c
        vcp_hal/usbd_conf.h
        vcp_hal/usbd_desc.c
        vcp_hal/usbd_desc.h
        vcpf4/stm32f4xx_it.c
        vcpf4/stm32f4xx_it.h
        vcpf4/usb_bsp.c
        vcpf4/usb_conf.h
        vcpf4/usbd_cdc_vcp.c
        vcpf4/usbd_cdc_vcp.h
        vcpf4/usbd_conf.h
        vcpf4/usbd_desc.c
        vcpf4/usbd_desc.h
        vcpf4/usbd_usr.c
        main.c
        platform.h)

add_executable(main ${SOURCE_FILES})